[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=41.0.0",
    "pydantic>=2.8.0",
    "rich==13.8.1",
    "rich-argparse==1.6.0",
    "scalecodec==1.2.8",
    "substrate-interface==1.7.7",
]
